--- a/src/main/resources/templates/medicalUser.html
+++ b/src/main/resources/templates/medicalUser.html
@@ -11,10 +11,10 @@
                <p class="stats" id="userName">YourUsername: [[${medUser.userName}]]</p>
                <p class="stats" id="name">Name: [[${medUser.firstName}]] [[${medUser.lastName}]]</p>
                <p class="stats" id="contactInfo">Contact Info:</p>
-               <ul>
-                   <li th:if="${medUser.contactInfo.address}" th:text="${medUser.contactInfo.address}"></li>
-                   <li th:if="${medUser.contactInfo.phone}" th:text="${medUser.contactInfo.phone}"></li>
-                   <li th:if="${medUser.contactInfo.email}" th:text="${medUser.contactInfo.email}"></li>
+               <ul th:if="${medUser.contactInfo}">
+                   <li th:if="${medUser.contactInfo.address}">[[${medUser.contactInfo.address}]]</li>
+                   <li th:if="${medUser.contactInfo.phone}">[[${medUser.contactInfo.phone}]]</li>
+                   <li th:if="${medUser.contactInfo.email}">[[${medUser.contactInfo.email}]]</li>
                </ul>
                <p class="stats" id="specialty">Specialty: [[${medUser.medicalSpecialty}]]</p>
                <p class="stats" id="institution">Institution: [[${medUser.medicalInstitution}]]</p>
@@ -26,14 +26,14 @@
        <div th:if="${medicalUsers.patient}">
            <h2>Your Patient</h2>
            <div th:each="patient : ${medicalUsers.patient}">
-               <h3 th:text="|${patient.firstName} ${patient.lastName}|"></h3>
+               <h3>[[${patient.firstName}]] [[${patient.lastName}]]</h3>
                <ul>
                    <li>Diagnosis: [[${patient.diagnosis}]]</li>
                    <li>Contact</li>
                    <ul>
-                       <li th:if="${patient.contactInfo.address}" th:text="${patient.contactInfo.address}"></li>
-                       <li th:if="${patient.contactInfo.phone}" th:text="${patient.contactInfo.phone}"></li>
-                       <li th:if="${patient.contactInfo.email}" th:text="${patient.contactInfo.email}"></li>
+                       <li th:if="${patient.contactInfo.address}">[[${patient.contactInfo.address}]]</li>
+                       <li th:if="${patient.contactInfo.phone}">[[${patient.contactInfo.phone}]]</li>
+                       <li th:if="${patient.contactInfo.email}">[[${patient.contactInfo.email}]]</li>
                    </ul>
                    <li>Recent Status: <span><em>placeholder for patient emotion</em></span></li>
                 </ul>
@@ -42,9 +42,9 @@
                     <div th:if="${patient.medications}">
                         <h3>Medications</h3>
                         <div th:each="medication : ${patient.medications}">
-                            <h4 th:text="${medication.genericName}"></h4>
-                            <p>Reason for administration: <span th:text="${medication.reason}"></span></p>
-                            <p>Doasge: <span th:text="${medication.dosage}"></span> via <span th:text="${medication.administration}"></span> every <span th:text="${medication.frequencyAmount}"></span> <span th:text="${medication.frequencyTime}"></span></p>
+                            <h4>[[${medication.genericName}]]</h4>
+                            <p>Reason for administration: [[${medication.reason}]]</p>
+                            <p>Doasge: [[${medication.dosage}]] via [[${medication.administration}]] every [[${medication.frequencyAmount}]] [[${medication.frequencyTime}]]</p>
                             <img class="medication-image" src="${medication.picture}" alt="Medication Image Here" />
                         </div>
                     </div>
@@ -60,16 +60,16 @@
 
                 <section class="nonMedUser">
                     <div th:if="${patient.nonMedicalUser}">
-                        <h3><span th:text="${patient.firstName}"></span>'s Caregiver</h3>
+                        <h3>[[${patient.firstName}]]'s Caregiver</h3>
                         <div th:each="nonMedUser : ${patient.nonMedicalUser}">
-                            <h4 th:text="|${nonMedUser.firstName} ${nonMedUser.lastName}"></h4>
+                            <h4>[[${nonMedUser.firstName}]] [[${nonMedUser.lastName}]]</h4>
                             <ul>
                                 <li>Relationship to Patient: <span th:text="${nonMedUser.relationshipWithPatient}">unknown</span></li>
                                 <li>Contact</li>
                                 <ul>
-                                    <li th:if="${nonMedUser.contactInfo.address}" th:text="${nonMedUser.contactInfo.address}"></li>
-                                    <li th:if="${nonMedUser.contactInfo.phone}" th:text="${nonMedUser.contactInfo.phone}"></li>
-                                    <li th:if="${nonMedUser.contactInfo.email}" th:text="${nonMedUser.contactInfo.email}"></li>
+                                    <li th:if="${nonMedUser.contactInfo.address}">[[${nonMedUser.contactInfo.address}]]</li>
+                                    <li th:if="${nonMedUser.contactInfo.phone}">[[${nonMedUser.contactInfo.phone}]]</li>
+                                    <li th:if="${nonMedUser.contactInfo.email}">[[${nonMedUser.contactInfo.email}]]</li>
                                 </ul>
                             </ul>
                         </div>
