--- a/src/main/resources/templates/patient.html
+++ b/src/main/resources/templates/patient.html
@@ -37,9 +37,9 @@
             <h2>Medical Care Professionals</h2>
             <div th:each="medUser : ${patients.medicalUser}">
                 <h3>[[${medUser.firstName}]] [[${medUser.lastName}]]</h3>
-                <p>Medical Specialty: <span th:text="${medUser.medicalSpecialty}">unknown</span></p>
-                <p>Medical Care Center: <span th:text="${medUser.medicalInstitution}">unknown</span></p>
-                <p>Medical Center Phone Number: <span th:text="${medUser.institutionTelephone}">unknown</span></p>
+                <p th:text=" 'Specialty: ' + (${medUser.medicalSpecialty} ?: 'unknown')"></p>
+                <p th:text=" 'Institution: ' + (${medUser.medicalInstitution} ?: 'unknown')"></p>
+                <p th:text=" 'Institution Phone: ' + (${medUser.institutionTelephone} ?: 'unknown')"></p>
                 <p>Contact</p>
                 <ul>
                     <li th:if="${medUser.contactInfo.phone}">[[${medUser.contactInfo.phone}]]</li>
