--- a/src/main/resources/templates/nonMedicalUser-Home.html
+++ b/src/main/resources/templates/nonMedicalUser-Home.html
@@ -6,7 +6,7 @@
 </head>
 
 <body class="container">
-  <div th:each="nonMedicalUser: ${nonMedicalUsers}">
+  <div>
     <header>
       <h2>Peace of Mind</h2>
       <h3>
