--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+   <title>A Medical User</title>
+</head>
+<body>
 <header>
    <h2>Peace of Mind Application</h2>
   <h3>Application Phase 1</h3>
@@ -24,6 +30,9 @@
     </div>
   </article>
 </section>
-<footer>
-  <span>&copy; Peace of Mind WCCI Final project</span>
-</footer>
+</body>
+   <footer>
+       <span>&copy; 2018 Peace Of Mind WCCI Flex Fall Columbus Final project</span>
+   </footer>
+</body>
+</html>
