Updated html templates to fit order of items in view from whiteboarding

--- a/src/main/resources/templates/patient.html
+++ b/src/main/resources/templates/patient.html
@@ -4,20 +4,26 @@
     <title>A Patient</title>
 </head>
 <body class="container">
-    <h1>Your Information</h1>
-    <div>
-        <p>Name: [[${patient.firstName}]] [[${patient.lastName}]]</p>
-        <p>Contact Info:</p>
-        <ul th:if="${patient.contactInfo}">
-            <li th:if="${patient.contactInfo.address}">[[${patient.contactInfo.address}]]</li>
-            <li th:if="${patient.contactInfo.phone}">[[${patient.contactInfo.phone}]]</li>
-            <li th:if="${patient.contactInfo.email}">[[${patient.contactInfo.email}]]</li>
-        </ul>
-        <p>DOB: [[${patient.dateOfBirth}]]</p>
-        <p>Diagnosis: [[${patient.diagnosis}]]</p>
-    </div>
+    
+    <h1>Peace Of Mind</h1>
 
-    <section class="medUser">
+    <section class="medication">
+        <div th:if="${patient.medications}">
+            <h2>Medications</h2>
+            <div th:each="medication : ${patient.medications}">
+                <h3>[[${medication.genericName}]]</h3>
+                <p>Reason to Take: [[${medication.reason}]]</p>
+                <p>Please take [[${medication.dosage}]] via [[${medication.administration}]] every [[${medication.frequencyAmount}]] [[${medication.frequencyTime}]]</p>
+                <img class="medication-image" src="${medication.picture}" alt="Medication Image Here" />
+            </div>
+        </div>
+    </section>
+    
+    <section class="patientStatus">
+        <h2>How are you feeling?</h2>
+    </section>
+
+    <section class="nonMedUser">
         <div th:if="${patient.nonMedicalUser}">
             <h2>Caregiver</h2>
             <div th:each="nonMedUser : ${patient.nonMedicalUser}">
@@ -31,7 +37,7 @@
             </div>
         </div>
     </section>
-
+    
     <section class="medUser">
         <div th:if="${patient.medicalUser}">
             <h2>Medical Care Professionals</h2>
@@ -48,23 +54,26 @@
             </div>
         </div>
     </section>
-
-    <section class="medication">
-        <div th:if="${patient.medications}">
-            <h2>Medications</h2>
-            <div th:each="medication : ${patient.medications}">
-                <h3>[[${medication.genericName}]]</h3>
-                <p>Reason to Take: [[${medication.reason}]]</p>
-                <p>Please take [[${medication.dosage}]] via [[${medication.administration}]] every [[${medication.frequencyAmount}]] [[${medication.frequencyTime}]]</p>
-                <img class="medication-image" src="${medication.picture}" alt="Medication Image Here" />
-            </div>
+    
+    <section class="userInfo">
+        <h2>Your Information</h2>
+        <div>
+            <p>Name: [[${patient.firstName}]] [[${patient.lastName}]]</p>
+            <p>Contact Info:</p>
+            <ul th:if="${patient.contactInfo}">
+                <li th:if="${patient.contactInfo.address}">[[${patient.contactInfo.address}]]</li>
+                <li th:if="${patient.contactInfo.phone}">[[${patient.contactInfo.phone}]]</li>
+                <li th:if="${patient.contactInfo.email}">[[${patient.contactInfo.email}]]</li>
+            </ul>
+            <p>DOB: [[${patient.dateOfBirth}]]</p>
+            <p>Diagnosis: [[${patient.diagnosis}]]</p>
         </div>
     </section>
-
+    
     <footer>
         <span>&copy; 2018 Peace Of Mind WCCI Flex Fall Columbus Final project</span>
     </footer>
-
+    
 </body>
 
 </html>
