--- a/src/main/resources/templates/medicalUser.html
+++ b/src/main/resources/templates/medicalUser.html
@@ -1,89 +1,82 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-   <title>A Medical User</title>
+    <title>A Medical User</title>
 </head>
 <body class="container">
-   <article id="content">
-           <h1>Your Information</h1>
-           <div id="content-body">
+    
+    <h1>Peace Of Mind</h1>
+    
+    
+    <section class="patient">
+        <div th:if="${medUser.patient}" th:each="patient : ${medUser.patient}">
+            <h2>Patient: [[${patient.firstName}]] [[${patient.lastName}]]</h2>
+            <h3>Diagnosis: [[${patient.diagnosis}]]</h3>
+            
+            <section class="medLog">
+                <h3>Med Log</h3>
+                <div>
+                    <p> <em>place holder for medlog display</em> </p>
+                </div>
+            </section>
 
-               <p class="stats" id="userName">YourUsername: [[${medUser.userName}]]</p>
-               <p class="stats" id="name">Name: [[${medUser.firstName}]] [[${medUser.lastName}]]</p>
-               <p class="stats" id="contactInfo">Contact Info:</p>
-               <ul th:if="${medUser.contactInfo}">
-                   <li th:if="${medUser.contactInfo.address}">[[${medUser.contactInfo.address}]]</li>
-                   <li th:if="${medUser.contactInfo.phone}">[[${medUser.contactInfo.phone}]]</li>
-                   <li th:if="${medUser.contactInfo.email}">[[${medUser.contactInfo.email}]]</li>
-               </ul>
-               <p class="stats" id="specialty">Specialty: [[${medUser.medicalSpecialty}]]</p>
-               <p class="stats" id="institution">Institution: [[${medUser.medicalInstitution}]]</p>
-               <p class="stats" id="phone">Institution Phone #: [[${medUser.institutionTelephone}]]</p>
-           </div>
-   </article>
-
-   <section class="patient">
-       <div th:if="${medUser.patient}">
-           <h2>Your Patient</h2>
-           <div th:each="patient : ${medUser.patient}">
-               <h3>[[${patient.firstName}]] [[${patient.lastName}]]</h3>
-               <ul>
-                   <li>Diagnosis: [[${patient.diagnosis}]]</li>
-                   <li>Contact</li>
-                   <ul>
-                       <li th:if="${patient.contactInfo.address}">[[${patient.contactInfo.address}]]</li>
-                       <li th:if="${patient.contactInfo.phone}">[[${patient.contactInfo.phone}]]</li>
-                       <li th:if="${patient.contactInfo.email}">[[${patient.contactInfo.email}]]</li>
-                   </ul>
-                   <li>Recent Status: <span><em>placeholder for patient emotion</em></span></li>
-                </ul>
-
-                <section class="medication">
-                    <div th:if="${patient.medications}">
-                        <h3>Medications</h3>
-                        <div th:each="medication : ${patient.medications}">
-                            <h4>[[${medication.genericName}]]</h4>
-                            <p>Reason for administration: [[${medication.reason}]]</p>
-                            <p>Doasge: [[${medication.dosage}]] via [[${medication.administration}]] every [[${medication.frequencyAmount}]] [[${medication.frequencyTime}]]</p>
-                            <img class="medication-image" src="${medication.picture}" alt="Medication Image Here" />
-                        </div>
+            <section class="patientStatus">
+                <h3>Current Patient Status</h3>
+                <div>
+                    <p><em>placeholder!!!!</em></p>
+                </div>
+            </section>
+            
+            <section class="medication">
+                <div th:if="${patient.medications}">
+                    <h3>Medications</h3>
+                    <div th:each="medication : ${patient.medications}">
+                        <h4>[[${medication.genericName}]]</h4>
+                        <p>Reason for administration: [[${medication.reason}]]</p>
+                        <p>Doasge: [[${medication.dosage}]] via [[${medication.administration}]] every [[${medication.frequencyAmount}]] [[${medication.frequencyTime}]]</p>
+                        <img class="medication-image" src="${medication.picture}" alt="Medication Image Here" />
                     </div>
-                </section>
+                </div>
+            </section>
 
-                <section class="medLog">
-                    <div>
-                      <h3>Med Log</h3>
-                      <div>
-                        <p> <em>place holder for medlog display</em> </p>
-                      </div>
-                  </section>
+            <section class="patientInfo">
+                <h3>Contact</h3>
+                <ul>
+                    <li th:if="${patient.contactInfo.address}">[[${patient.contactInfo.address}]]</li>
+                    <li th:if="${patient.contactInfo.phone}">[[${patient.contactInfo.phone}]]</li>
+                    <li th:if="${patient.contactInfo.email}">[[${patient.contactInfo.email}]]</li>
+                </ul>          
+            </section>    
 
-                <section class="nonMedUser">
-                    <div th:if="${patient.nonMedicalUser}">
-                        <h3>[[${patient.firstName}]]'s Caregiver</h3>
-                        <div th:each="nonMedUser : ${patient.nonMedicalUser}">
-                            <h4>[[${nonMedUser.firstName}]] [[${nonMedUser.lastName}]]</h4>
+
+            <section class="nonMedUser">
+                <div th:if="${patient.nonMedicalUser}">
+                    <h3>[[${patient.firstName}]]'s Caregiver</h3>
+                    <div th:each="nonMedUser : ${patient.nonMedicalUser}">
+                        <h4>[[${nonMedUser.firstName}]] [[${nonMedUser.lastName}]]</h4>
+                        <ul>
+                            <li>Relationship to Patient: <span th:text="${nonMedUser.relationshipWithPatient}">unknown</span></li>
+                            <li>Contact</li>
                             <ul>
-                                <li>Relationship to Patient: <span th:text="${nonMedUser.relationshipWithPatient}">unknown</span></li>
-                                <li>Contact</li>
-                                <ul>
-                                    <li th:if="${nonMedUser.contactInfo.address}">[[${nonMedUser.contactInfo.address}]]</li>
-                                    <li th:if="${nonMedUser.contactInfo.phone}">[[${nonMedUser.contactInfo.phone}]]</li>
-                                    <li th:if="${nonMedUser.contactInfo.email}">[[${nonMedUser.contactInfo.email}]]</li>
-                                </ul>
+                                <li th:if="${nonMedUser.contactInfo.address}">[[${nonMedUser.contactInfo.address}]]</li>
+                                <li th:if="${nonMedUser.contactInfo.phone}">[[${nonMedUser.contactInfo.phone}]]</li>
+                                <li th:if="${nonMedUser.contactInfo.email}">[[${nonMedUser.contactInfo.email}]]</li>
                             </ul>
-                        </div>
+                        </ul>
                     </div>
-                </section>
+                </div>
+            </section>
 
-            </div>
-       </div>
-   </section>
+        </div>
+    </section>
 
+    <nav>
+        <a th:href="@{/medical-user(id=${medUser.id})}">Account</a>
+    </nav>
 
-   <footer>
-       <span>&copy; 2018 Peace Of Mind WCCI Flex Fall Columbus Final project</span>
-   </footer>
+    <footer>
+        <span>&copy; 2018 Peace Of Mind WCCI Flex Fall Columbus Final project</span>
+    </footer>
 
 </body>
 </html>
