--- a/src/main/resources/templates/medicalUser-Home.html
+++ b/src/main/resources/templates/medicalUser-Home.html
@@ -1,9 +1,3 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-   <title>A Medical User</title>
-</head>
-<body>
 <header>
    <h2>Peace of Mind Application</h2>
   <h3>Application Phase 1</h3>
@@ -30,9 +24,6 @@
     </div>
   </article>
 </section>
-</body>
-   <footer>
-       <span>&copy; 2018 Peace Of Mind WCCI Flex Fall Columbus Final project</span>
-   </footer>
-</body>
-</html>
+<footer>
+  <span>&copy; Peace of Mind WCCI Final project</span>
+</footer>
