--- a/src/main/resources/templates/patient-sign-up.html
+++ b/src/main/resources/templates/patient-sign-up.html
@@ -2,47 +2,65 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Medications Account</title>
+<title>Patient Account</title>
 </head>
 
 <body class="container">
-    <header>
-        <h2>Create a New Medication</h2>
-    </header>
-    <form method="POST">
-        <div>
-            <label>Enter Medication Name</label>
-            <input type="text" name="genericName">
-        </div>
-        <div>
-            <label>Enter Dosage</label>
-            <input type="text" name="dosage">
-        </div>
-        <div>
-            <label>Enter Frequency</label>
-            <input type="text" name="frequencyAmount">
-        </div>
-        <div>
-            <label>Enter Time</label>
-            <input type="text" name="frequencyTime">
-        </div>
-        <div>
-            <p>Medication Picture</p>
-            <img src="../static/images/need-meds.png">
-            <div>
-                <label>Enter Reason</label>
-                <input type="text" name="reason">
-            </div>
-            <div>
-                <button type="">Submit</button>
-            </div>
-    </form>
-    <h3>
-        <a th:href="@{/non-medical-user-home(id=${nonMedicalUser.id})}">Home</a>
-    </h3>
-    <footer>
-        <span>&copy; 2018 Peace Of Mind WCCI Flex Fall Columbus Final project</span>
-    </footer>
+	<header>
+		<h2>Create a New Patient</h2>
+	</header>
+	<form method="POST">
+		<div>
+			<label>Enter First Name</label> <input type="text" name="genericName">
+		</div>
+		<div>
+			<label>Enter Last Name</label> <input type="text" name="genericName">
+		</div>
+		<div>
+			<label>Enter Phone #</label> <input type="text" name="phone">
+		</div>
+		<div>
+			<label>Enter Street Address</label> <input type="text"
+				name="streetAddress">
+		</div>
+		<div>
+			<label>Enter Secondary Street Address</label> <input type="text"
+				name="secondaryField">
+		</div>
+		<div>
+			<label>Enter City</label> <input type="text" name="city">
+		</div>
+		<div>
+			<label>Enter State</label> <input type="text" name="state">
+		</div>
+		<div>
+			<label>Enter Zipcode</label> <input type="text" name="zipcode">
+		</div>
+		<div>
+			<label>Enter Email-Address</label> <input type="text" name="email">
+		</div>
+		<div>
+			<label>Enter date of birth</label> <input type="text"
+				name="dateOfBirth">
+		</div>
+		<div>
+			<label>Enter Diagnosis</label> <input type="text" name="diagnosis">
+		</div>
+		<div>
+			<p>Your Picture</p>
+			<img src="../static/images/patient.png">
+		</div>
+		<div>
+			<button type="">Submit</button>
+		</div>
+	</form>
+	<h3>
+		<a th:href="@{/non-medical-user-home(id=${nonMedicalUser.id})}">Home</a>
+	</h3>
+	<footer>
+		<span>&copy; 2018 Peace Of Mind WCCI Flex Fall Columbus Final
+			project</span>
+	</footer>
 </body>
 
 </html>
